Properties with yml file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.profiles.active=de
+
+guru.user=user
+guru.password=password
+guru.url=myUrl
+
+guru.oth.user=userOther
+guru.oth.password=passwordOther
+guru.oth.url=myUrlOther
